<resources>
    <string name="app_name">COE</string>
    <string name="home">Home</string>
    <string name="announcements">Announcements</string>
    <string name="timetable">Time Table</string>
    <string name="result">Result</string>
    <string name="complaints">Complaints</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filter">sort by</string>
    <string name="withdrawcomplaint">Withdraw Complaint</string>
    <string name="name">Name</string>
    <string name="yourname">Your name</string>
    <string name="complaintname">Complaint Name</string>
    <string name="complainttype">Complaint Type</string>

    <string name="samplestring">
            I am writing this complaint regarding the payment issue that i had.
        I was trying to make a payment and the respective amount is debited from my account.
        But i am still not able to access the exam.
        Please take a loot at this issue as soon as possible
    </string>
    <string name="raisecomplaint">Raise Complaint</string>
    <string name="total_complaints">Total \n Complaints</string>
    <string name="pending_complaints">Pending\nComplaints</string>
    <string name="address_rating">Addressing\nrate</string>
    <string name="addressed_complaints">Addressed\nComplaints</string>
    <string name="pending_complaints_nb">Pending Complaints</string>
    <string name="address_complaint">Address Complaint</string>
    <string name="move_to_addressed">Move to Addressed</string>
    <string name="addressed_complaints_db">Addressed Complaints</string>
    <string name="total_exams">Total\nExams</string>
    <string name="ongoing_exams">Ongoing\nExams</string>
    <string name="completed_exams">Completed\nExams</string>
    <string name="upcoming_exams">Upcoming\nExams</string>
    <string name="completed_exams1">Completed Exams</string>
    <string name="ongoing_exams1">Ongoing Exams</string>
    <string name="exam">Exam</string>
    <string name="create_exam">Create Exam</string>
    <string name="exam_registration">Exam Registration</string>
    <string name="users">Users</string>

    <string-array name="complaint_types">
        <item>Complaint type1</item>
        <item>Complaint type2</item>
        <item>Complaint type3</item>
        <item>Complaint type4</item>
        <item>Complaint type5</item>
    </string-array>

</resources>
