<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PendingComplaintsActivity">

    <ImageView
        android:id="@+id/btnPrevious"
        android:layout_width="30dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/ic_back_button" />

    <TextView
        android:fontFamily="@font/montserrat"
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/complaints"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/btnPrevious"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:id="@+id/contentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pageTitle"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/txtIssueName"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="Issue Name PlaceHolder"
            android:textSize="20sp" />

        <ScrollView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/complains_desc_box_style">

            <TextView
                android:id="@+id/txtIssueDescription"
                android:padding="15dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/samplestring"/>
        </ScrollView>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddressComplaint"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_above="@+id/btnMoveToAddressed"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/montserrat"
        android:text="@string/address_complaint"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMoveToAddressed"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/montserrat"
        android:text="@string/move_to_addressed"
        android:textStyle="bold"
        app:cornerRadius="10dp" />


</RelativeLayout>