<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComplaintsDashboardAdmin">

    <ImageView
        android:id="@+id/btnPrevious"
        android:layout_width="30dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/ic_back_button" />

    <TextView
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/complaints"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/btnPrevious"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="25dp"
        android:layout_below="@id/btnPrevious"
        android:layout_marginTop="20dp"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/statisticsCard"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/pinkish_card_color"
            android:backgroundTint="@color/pinkish_card_color"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="top|start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTotalComplaints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="100"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/total_complaints"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="top|end"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPendingComplaints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="20"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/pending_complaints"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom|end"
                android:layout_marginLeft="60dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtAddressingRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="80%"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/address_rating"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="60dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtAddressedComplaints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat"
                    android:text="80"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/addressed_complaints"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnPendingComplaints"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@id/statisticsCard"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/orange"
            android:clickable="true"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:textAllCaps="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/pending_complaints"
                    android:textColor="@color/white"
                    android:gravity="center|start"
                    android:textSize="20sp"
                    android:padding="40dp"
                    android:textAlignment="textStart"
                    />

                <ImageView
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|end"
                    android:paddingHorizontal="30dp"
                    android:src="@drawable/outline_update_24" />


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnAddressedComplaints"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@id/btnPendingComplaints"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/darkblue"
            android:clickable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/addressed_complaints"
                    android:textColor="@color/white"
                    android:gravity="center|start"
                    android:textSize="20sp"
                    android:padding="40dp"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    />

                <ImageView
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|end"
                    android:paddingHorizontal="30dp"
                    android:src="@drawable/ic_baseline_done_outline_24" />


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>



</RelativeLayout>